Fixed z-index issue for figure

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -356,6 +356,7 @@ figure {
 			content: "";
 			display: block;
 			position: absolute;
+			z-index: 1;
 			left: 0;
 			right: 0;
 			top: -1rem;
@@ -379,6 +380,7 @@ figure {
 
 	img {
 		position: relative;
+		z-index: 0;
 		width: 100%;
 	}
 
